--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,17 @@
     package="com.zetagh.clanbattleapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
-        android:name=".ClanBattlesApp"
         android:allowBackup="true"
+        android:name=".ClanBattlesApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".viewcontrollers.activities.OnboardingActivity"
             android:label="@string/app_name"
+            android:name=".viewcontrollers.activities.OnboardingActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".viewcontrollers.activities.MainActivity"
+
+        <activity android:name=".viewcontrollers.activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
