--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,12 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/mapsKey"/>
+            android:value="@string/mapsKey" />
 
         <activity
             android:name=".viewcontrollers.activities.OnboardingActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".viewcontrollers.activities.MainActivity"
             android:label="@string/app_name"
@@ -49,10 +47,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.zetagh.clanbattleapp.viewcontrollers.activities.MainActivity" />
         </activity>
-        <activity android:name=".viewcontrollers.activities.LoginActivity"
+        <activity
+            android:name=".viewcontrollers.activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.int ent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
